# gflash

./: .gitignore  README.md  pyproject.toml  user.ipynb
dev/: create_google_token.py  quickstart.py  tryout.py
docs/: README.md  example.ipynb  example2.ipynb
gflashcards/: __init__.py  app.py  cache.py  card.py  clipboard.py  tags.py  upload.py  utils.py
gflashcards/js/: markdown-hot.js
gflashcards/renderer/: markdown-hot.css  markdown-hot.js
